# myvk

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TestApp.cpp  TestApp.h  common.mk  common.props  main.cpp  variables.mk
Assets/: attack_droid.mtl  cube.3ds
Assets/old_makefiles/: common.mk  variables.mk
Example/: CMakeLists.txt  ExampleApp.cpp  ExampleApp.h  Makefile  README.md  main.cpp
Example/include/: ExampleApp.h
Example/src/: ExampleApp.cpp  main.cpp
Examples/Clustered/: CMakeLists.txt  README.md
Examples/Clustered/include/: ClusteredApp.h  ClusteredCompute.h  DebugDraw.h  Helpers.h
Examples/Clustered/shaders/: culling.comp  direction.comp  shader.frag  shader.vert
Examples/Clustered/src/: ClusteredApp.cpp  ClusteredCompute.cpp  DebugDraw.cpp  main.cpp
Examples/DynamicUniformBuffer/: CMakeLists.txt  README.md
Examples/DynamicUniformBuffer/include/: DynamicApp.h
Examples/DynamicUniformBuffer/shaders/: dynamic.vert
Examples/DynamicUniformBuffer/src/: DynamicApp.cpp  main.cpp
Examples/LightShaft/: CMakeLists.txt  README.md
Examples/LightShaft/include/: LightShaftApp.h  LightShaftCommon.h  LightShaftCreator.h  LightShaftPrepass.h  ObjectRenderPass.h  PostLightShaft.h  PreLightShaft.h
Examples/LightShaft/shaders/: composite.frag  lightshaft.frag  lightshaft.vert  post_lightshaft.frag  pre_lightshaft.frag  pre_lightshaft.vert
Examples/LightShaft/src/: LightShaftApp.cpp  LightShaftCreator.cpp  LightShaftPrepass.cpp  ObjectRenderPass.cpp  PostLightShaft.cpp  PreLightShaft.cpp  main.cpp
Examples/Mandelbrot/: CMakeLists.txt  README.md
Examples/Mandelbrot/include/: MandelbrotApp.h
Examples/Mandelbrot/shaders/: shader.comp
Examples/Mandelbrot/src/: MandelbrotApp.cpp  main.cpp
Examples/Minimal/: CMakeLists.txt  README.md
Examples/Minimal/include/: ExampleApp.h
Examples/Minimal/shaders/: shader.frag
Examples/Minimal/src/: ExampleApp.cpp
Examples/Multisampling/: CMakeLists.txt  README.md
Examples/Multisampling/include/: MultisamplingApp.h
Examples/Multisampling/src/: MultisamplingApp.cpp  main.cpp
Examples/PBR/: CMakeLists.txt
Examples/PBR/include/: PBRApp.h  PipelineHelper.h  RenderObject.h
Examples/PBR/shaders/: brdflut.frag  pbr.vert  skybox.frag
Examples/PBR/src/: BRDFLUT.cpp  EnvironmentImages.cpp  Offscreen.cpp  PBRApp.cpp  PipelineHelper.cpp  Skybox.cpp
Examples/Particles/: CMakeLists.txt  README.md
Examples/Particles/include/: Helpers.h  ParticleCompute.h  ParticlesApp.h
Examples/Particles/shaders/: direction.comp  position.comp  shader.frag  shader.vert
Examples/Particles/src/: ParticleCompute.cpp  ParticlesApp.cpp  main.cpp
Examples/PushConstant/: CMakeLists.txt  README.md
Examples/PushConstant/include/: PushConstantApp.h
Examples/PushConstant/shaders/: push_constant.frag
Examples/PushConstant/src/: PushConstantApp.cpp  main.cpp
Examples/Reflection/: CMakeLists.txt  README.md
Examples/Reflection/include/: GBufferPass.h  ReflectionApp.h
Examples/Reflection/shaders/: gbuffer.frag  gbuffer.vert  object.frag  object.vert  reflection.frag
Examples/Reflection/src/: GBufferPass.cpp  ReflectionApp.cpp  main.cpp
Examples/Secondary/include/: SecondaryApp.h
Examples/Secondary/shaders/: secondary.vert
Examples/Secondary/src/: main.cpp  (+1 more)
Examples/SecondaryCommandBuffer/: CMakeLists.txt  README.md
Examples/SpecializationConstant/: CMakeLists.txt  README.md
Examples/Subpass/: README.md
Examples/Triangle/: CMakeLists.txt  README.md
Framework/: API.cpp  API.h  Application.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Command.cpp  Command.h  Common.cpp  Common.h  Constants.h  Context.cpp  Context.h  Device.cpp  Device.h  Execute.h  Framework.cpp  Framework.h  GUI.cpp  GUI.h  Image.cpp  Image.h  Input.cpp  Input.h  Instance.cpp  Instance.h  Macros.h  Makefile  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  (+12 more)
Framework/Framework/: Framework.sln  Framework.vcxproj  Test.cpp  Test.h
Framework/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw_vulkan.cpp
Framework/inc/: Application.h  Command.h  Common.h  GUI.h  Input.h  Model.h
Framework/include/fw/: API.h  Application.h  Buffer.h  Camera.h  CameraController.h  Command.h  Common.h  Constants.h  Context.h  Device.h  Execute.h  Framework.h  GUI.h  Image.h  Input.h  Instance.h  Macros.h  Mesh.h  Model.h  Pipeline.h  RenderPass.h  Sampler.h  SwapChain.h  Texture.h  Time.h  Transformation.h  Window.h
Framework/src/: API.cpp  Buffer.cpp  Camera.cpp  CameraController.cpp  Command.cpp  Common.cpp  Context.cpp  Device.cpp  Framework.cpp  GUI.cpp  Image.cpp  Input.cpp  Instance.cpp  Mesh.cpp  Model.cpp  Pipeline.cpp  RenderPass.cpp  Sampler.cpp  SwapChain.cpp  Texture.cpp  Time.cpp  Transformation.cpp  Window.cpp
PBR/: BRDFLUT.cpp  CMakeLists.txt  EnvironmentImages.cpp  EnvironmentImages.h  EquirectangularHDR.cpp  EquirectangularHDR.h  Main.cpp  Makefile  Offscreen.cpp  Offscreen.h  PBR.vcxproj  PBRApp.cpp  PBRApp.h  PipelineHelper.cpp  PipelineHelper.h  README.md  RenderObject.cpp  RenderObject.h  Skybox.cpp  Skybox.h
PBR/inc/: BRDFLUT.h  Helpers.h  PBRApp.h
PBR/include/: BRDFLUT.h  EnvironmentImages.h  Helpers.h  Offscreen.h  PBRApp.h  PipelineHelper.h  RenderObject.h  Skybox.h
PBR/shaders/: brdflut.frag  brdflut.vert  environment_cube.vert  equirectangular_hdr.frag  irradiance.frag  pbr.frag  pbr.vert  plain.frag  prefilter.frag  prefilter.vert  shader.vert  skybox.frag  skybox.vert
PBR/src/: BRDFLUT.cpp  EnvironmentImages.cpp  Offscreen.cpp  PBRApp.cpp  PipelineHelper.cpp  RenderObject.cpp  Skybox.cpp  main.cpp
Secondary/: CMakeLists.txt  README.md
Secondary/include/: SecondaryApp.h
Secondary/src/: SecondaryApp.cpp
Subpass/: CMakeLists.txt  Makefile  README.md  SubpassApp.cpp  SubpassApp.h  main.cpp
Subpass/include/: SubpassApp.h
Subpass/shaders/: composite.frag  gbuffer.frag
Subpass/src/: SubpassApp.cpp
TestApp/: Makefile  TestApp.cpp
TestApp/shaders/: shader.vert
shaders/: shader.vert
(+16 files in other folders)
